ncc/testsuite/positive/multi-implements.n
class foo {}
class bar {}

interface  I ['a] {}

class C1 : I [foo] {}

class C2 : C1, I [foo] {}

interface I2 : I [foo] {}

class C3 : C1, I2 {}

interface IFoo {
  Foo () : void;
}

class Explicit : IFoo {
  public Foo () : void implements IFoo.Foo {
    System.Console.WriteLine ("foo");
  }
}

module M {
  Main () : void {
    def x = Explicit () : IFoo;
    x.Foo ();
  }
}

/*
BEGIN-OUTPUT
foo
END-OUTPUT
*/
